--- a/index.html
+++ b/index.html
@@ -64,6 +64,31 @@
         </nav>
       </div>
     </header>
+    <section></section>
+    <footer class="page-footer font-small bg-footer text-white">
+      <div class="container">
+        <div class="row text-center d-flex justify-content-center">
+          <div class="col-md-2 footer-logo">
+            <a href="https://codeinstitute.net/" target="_blank"
+              ><img
+                src="https://i.imgur.com/XeDBzqr.png"
+                alt="Code Institute Logo"
+                height="40"
+            /></a>
+          </div>
+          <div class="col-sm-offset-0 col-sm-4 col-md-1">Privacy</div>
+          <div class="col-sm-offset-0 col-sm-4 col-md-1">FAQ</div>
+          <div class="col-sm-4 col-md-1">Contact</div>
+          <div class="col-xs-7 col-sm-12 col-md-offset-1 col-md-4">
+            Make the world a better place!
+          </div>
+          <div class="col-xs-5 col-sm-12 col-md-2">Sign Up Button</div>
+          <div class="col-xs-12 footer-copyright py-3">
+            © 2020 Startup Academy by Code Institute. All rights reserved.
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script> -->
