Footer initial links and styles

--- a/index.html
+++ b/index.html
@@ -76,9 +76,17 @@
                 height="40"
             /></a>
           </div>
-          <div class="col-sm-offset-0 col-sm-4 col-md-1">Privacy</div>
-          <div class="col-sm-offset-0 col-sm-4 col-md-1">FAQ</div>
-          <div class="col-sm-4 col-md-1">Contact</div>
+          <div class="col-sm-offset-0 col-sm-4 col-md-1">
+            <a href="https://codeinstitute.net/privacy-policy/" target="_blank"
+              >Privacy</a
+            >
+          </div>
+          <div class="col-sm-offset-0 col-sm-4 col-md-1">
+            <a href="#faq.html">FAQ</a>
+          </div>
+          <div class="col-sm-4 col-md-1">
+            <a href="mailto:startupacademy@codeinstitute.net">Contact</a>
+          </div>
           <div class="col-xs-7 col-sm-12 col-md-offset-1 col-md-4">
             Make the world a better place!
           </div>
