Improved footer button message

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
           <div class="col-sm-4 col-md-1">
             <a href="mailto:startupacademy@codeinstitute.net">Contact</a>
           </div>
-          <div class="col-xs-7 col-sm-12 col-md-offset-1 col-md-4">
+          <div
+            class="col-xs-7 col-sm-12 col-md-offset-1 col-md-4 button-message"
+          >
             Make the world a better place!
           </div>
           <div class="col-xs-5 col-sm-12 col-md-2">Sign Up Button</div>
