Improved footer links positioning tablets

--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
                 height="40"
             /></a>
           </div>
-          <div class="col-sm-offset-0 col-sm-4 col-md-1">
+          <div class="col-sm-offset-3 col-sm-2 col-md-offset-0 col-md-1">
             <a href="https://codeinstitute.net/privacy-policy/" target="_blank"
               >Privacy</a
             >
           </div>
-          <div class="col-sm-offset-0 col-sm-4 col-md-1">
+          <div class="col-sm-offset-0 col-sm-2 col-md-1">
             <a href="#faq.html">FAQ</a>
           </div>
-          <div class="col-sm-4 col-md-1">
+          <div class="col-sm-2 col-md-1">
             <a href="mailto:startupacademy@codeinstitute.net">Contact</a>
           </div>
           <div
@@ -98,7 +98,11 @@
           >
             Make the world a better place!
           </div>
-          <div class="col-xs-5 col-sm-12 col-md-2">Sign Up Button</div>
+          <div class="col-xs-5 col-sm-12 col-md-2">
+            <a class="btn btn-light" type="button" href="signup.html"
+              >Sign Up</a
+            >
+          </div>
           <div class="col-xs-12 footer-copyright py-3">
             © 2020 Startup Academy by Code Institute. All rights reserved.
           </div>
