--- a/slack.html
+++ b/slack.html
@@ -71,6 +71,44 @@
       </div>
     </header>
     <section></section>
+    <footer class="page-footer font-small bg-footer text-white">
+      <div class="container">
+        <div class="row text-center d-flex justify-content-center">
+          <div class="col-md-2 footer-logo">
+            <a href="https://codeinstitute.net/" target="_blank"
+              ><img
+                src="https://i.imgur.com/XeDBzqr.png"
+                alt="Code Institute Logo"
+                height="40"
+            /></a>
+          </div>
+          <div class="col-sm-offset-3 col-sm-2 col-md-offset-0 col-md-1">
+            <a href="https://codeinstitute.net/privacy-policy/" target="_blank"
+              >Privacy</a
+            >
+          </div>
+          <div class="col-sm-offset-0 col-sm-2 col-md-1">
+            <a href="#faq.html">FAQ</a>
+          </div>
+          <div class="col-sm-2 col-md-1">
+            <a href="mailto:startupacademy@codeinstitute.net">Contact</a>
+          </div>
+          <div
+            class="col-xs-7 col-sm-12 col-md-offset-1 col-md-4 button-message"
+          >
+            Make the world a better place!
+          </div>
+          <div class="col-xs-5 col-sm-12 col-md-2">
+            <a class="btn btn-light" type="button" href="signup.html"
+              >Sign Up</a
+            >
+          </div>
+          <div class="col-xs-12 footer-copyright py-3">
+            © 2020 Startup Academy by Code Institute. All rights reserved.
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
