--- a/slack.html
+++ b/slack.html
@@ -88,7 +88,7 @@
             >
           </div>
           <div class="col-sm-offset-0 col-sm-2 col-md-1">
-            <a href="#faq.html">FAQ</a>
+            <a href="faq.html">FAQ</a>
           </div>
           <div class="col-sm-2 col-md-1">
             <a href="mailto:startupacademy@codeinstitute.net">Contact</a>
