Added what you get section index.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,39 @@
         </nav>
       </div>
     </header>
-    <section></section>
+    <section class="what-you-get bg-dark">
+      <div class="container">
+        <div class="row text-center d-flex justify-content-center">
+          <div class="col-sm-12 get-title">
+            <span><i class="fa fa-check-circle"></i></span>
+            <h2>What You Will Get</h2>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <h4 class="text-uppercase">Like-Minded Network</h4>
+            <p>
+              Collaborate with a network of like-minded individuals. Find
+              entrepreneurs with similar interests and build successful
+              startups.
+            </p>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <h4 class="text-uppercase">Slack Community</h4>
+            <p>
+              Gain access to the Startup Academy Slack workspace. Get feedback,
+              support and help from a community of entrepreneurs and founders.
+            </p>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <h4 class="text-uppercase">Accountability</h4>
+            <p>
+              Engage with fellow startups and entrepreneurs. Participate in
+              frequent learning sessions, set goals for your startup and change
+              the world.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer class="page-footer font-small bg-footer text-white">
       <div class="container">
         <div class="row text-center d-flex justify-content-center">
