--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         </nav>
       </div>
     </header>
+    <!-- What You Will Get Section -->
     <section class="what-you-get bg-dark">
       <div class="container">
         <div class="row text-center d-flex justify-content-center">
@@ -103,6 +104,40 @@
         </div>
       </div>
     </section>
+    <!-- /. What You Will Get Section -->
+    <!-- Academy's Objectives Section -->
+    <section class="objectives bg-light">
+      <div class="container">
+        <div class="row text-center d-flex justify-content-center">
+          <div class="col-sm-12 objectives-title">
+            <span><i class="fa fa-bullseye"></i></span>
+            <h2>The Academy's Objectives</h2>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <h4 class="text-uppercase">To Start</h4>
+            <p>
+              Foster and motivate individuals to consider building a company as
+              a way to impact the world positively!
+            </p>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <h4 class="text-uppercase">To Learn</h4>
+            <p>
+              Educate individuals on how to build a startup, providing them with
+              resources and tools to improve their probabilities of success.
+            </p>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <h4 class="text-uppercase">To Extend</h4>
+            <p>
+              Develop a community of individuals and entrepreneurs who can
+              support, guide and encourage one another.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /. Academy's Objectives Section -->
     <footer class="page-footer font-small bg-footer text-white">
       <div class="container">
         <div class="row text-center d-flex justify-content-center">
