--- a/index.html
+++ b/index.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="icon"
+      href="https://i.imgur.com/TInzWTN.png"
+      type="image/png"
+      sizes="16x16"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+    />
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <title>Startup Academy</title>
+  </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<link rel="icon" href="https://i.imgur.com/TInzWTN.png" type="image/png" sizes="16x16" />
-	<link rel="stylesheet"
-		href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
-	<link rel="stylesheet" href="assets/css/styles.css" />
-	<title>Startup Academy</title>
-</head>
-
-<body>
-	<header>
-		<div class="container">
-			<!-- Navigation main structure code from https://bootsnipp.com/snippets/vlXGB and adapted to the project -->
-			<nav class="navbar navbar-expand-lg navbar-light bg-white">
-				<a class="navbar-brand" href="index.html">
-					<img
+  <body>
+    <header>
+      <div class="container">
+        <!-- Navigation main structure code from https://bootsnipp.com/snippets/vlXGB and adapted to the project -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
+          <a class="navbar-brand" href="index.html">
+            <img
               src="https://i.imgur.com/ka262uI.png"
               alt="Startup Academy Logo"
               height="60"
           /></a>
-					<button
+          <button
             class="navbar-toggler"
             type="button"
             data-toggle="collapse"
@@ -36,136 +45,177 @@
             <span class="navbar-toggler-icon"></span>
           </button>
 
-					<div class="collapse navbar-collapse" id="navbarSupportedContent">
-						<ul class="navbar-nav ml-auto topnav">
-							<li class="nav-item active">
-								<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="topics.html">Topics</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="slack.html">Slack</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="help.html">Help</a>
-							</li>
-							<li class="nav-item">
-								<a class="btn btn-primary" type="button" href="signup.html">Sign Up</a>
-							</li>
-						</ul>
-					</div>
-			</nav>
-		</div>
-	</header>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto topnav">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html"
+                  >Home <span class="sr-only">(current)</span></a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="topics.html">Topics</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="slack.html">Slack</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="help.html">Help</a>
+              </li>
+              <li class="nav-item">
+                <a class="btn btn-primary" type="button" href="signup.html"
+                  >Sign Up</a
+                >
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </header>
+    <!-- Hero Section -->
+    <section class="hero">
+      <div class="container">
+        <div class="hero-inner">
+          <div class="row">
+            <div class="col-12 col-lg-2 hero-logo">
+              <img
+                src="https://i.imgur.com/0iWem9K.png"
+                alt="Startup Academy Icon White"
+                height="100"
+              />
+            </div>
+            <div class="col-12 col-lg-10 hero-title">
+              <h1>Startup Academy</h1>
+            </div>
+            <div class="col-12 hero-message">
+              <h2>
+                Learn the science of startups in 6 weeks with Code Institute's
+                free Startup Academy.
+              </h2>
+            </div>
+            <div class="col-12 hero-signup">
+              <h3>Sign up and join our next programme.</h3>
+            </div>
+            <div class="col-sm-3 hero-button">
+              <a href="signup.html" class="btn btn-light">Sign Up</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /. Hero Section -->
+    <!-- What You Will Get Section -->
+    <section class="what-you-get bg-dark">
+      <div class="container">
+        <div class="row text-center d-flex justify-content-center">
+          <div class="col-sm-12 get-title">
+            <span><i class="fa fa-check-circle"></i></span>
+            <h2>What You Will Get</h2>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <h4 class="text-uppercase">Like-Minded Network</h4>
+            <p>
+              Collaborate with a network of like-minded individuals. Find
+              entrepreneurs with similar interests and build successful
+              startups.
+            </p>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <h4 class="text-uppercase">Slack Community</h4>
+            <p>
+              Gain access to the Startup Academy Slack workspace. Get feedback,
+              support and help from a community of entrepreneurs and founders.
+            </p>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <h4 class="text-uppercase">Accountability</h4>
+            <p>
+              Engage with fellow startups and entrepreneurs. Participate in
+              frequent learning sessions, set goals for your startup and change
+              the world.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /. What You Will Get Section -->
 
-	<!-- What You Will Get Section -->
-	<section class="what-you-get bg-dark">
-		<div class="container">
-			<div class="row text-center d-flex justify-content-center">
-				<div class="col-sm-12 get-title">
-					<span><i class="fa fa-check-circle"></i></span>
-					<h2>What You Will Get</h2>
-				</div>
-				<div class="col-sm-12 col-md-4">
-					<h4 class="text-uppercase">Like-Minded Network</h4>
-					<p>
-						Collaborate with a network of like-minded individuals. Find
-						entrepreneurs with similar interests and build successful
-						startups.
-					</p>
-				</div>
-				<div class="col-sm-12 col-md-4">
-					<h4 class="text-uppercase">Slack Community</h4>
-					<p>
-						Gain access to the Startup Academy Slack workspace. Get feedback,
-						support and help from a community of entrepreneurs and founders.
-					</p>
-				</div>
-				<div class="col-sm-12 col-md-4">
-					<h4 class="text-uppercase">Accountability</h4>
-					<p>
-						Engage with fellow startups and entrepreneurs. Participate in
-						frequent learning sessions, set goals for your startup and change
-						the world.
-					</p>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- /. What You Will Get Section -->
+    <!-- Academy's Objectives Section -->
+    <section class="objectives bg-light">
+      <div class="container">
+        <div class="row text-center d-flex justify-content-center">
+          <div class="col-sm-12 objectives-title">
+            <span><i class="fa fa-bullseye"></i></span>
+            <h2>The Academy's Objectives</h2>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <h4 class="text-uppercase">To Start</h4>
+            <p>
+              Foster and motivate individuals to consider building a company as
+              a way to impact the world positively!
+            </p>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <h4 class="text-uppercase">To Learn</h4>
+            <p>
+              Educate individuals on how to build a startup, providing them with
+              resources and tools to improve their probabilities of success.
+            </p>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <h4 class="text-uppercase">To Extend</h4>
+            <p>
+              Develop a community of individuals and entrepreneurs who can
+              support, guide and encourage one another.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /. Academy's Objectives Section -->
 
-	<!-- Academy's Objectives Section -->
-	<section class="objectives bg-light">
-		<div class="container">
-			<div class="row text-center d-flex justify-content-center">
-				<div class="col-sm-12 objectives-title">
-					<span><i class="fa fa-bullseye"></i></span>
-					<h2>The Academy's Objectives</h2>
-				</div>
-				<div class="col-sm-12 col-md-4">
-					<h4 class="text-uppercase">To Start</h4>
-					<p>
-						Foster and motivate individuals to consider building a company as
-						a way to impact the world positively!
-					</p>
-				</div>
-				<div class="col-sm-12 col-md-4">
-					<h4 class="text-uppercase">To Learn</h4>
-					<p>
-						Educate individuals on how to build a startup, providing them with
-						resources and tools to improve their probabilities of success.
-					</p>
-				</div>
-				<div class="col-sm-12 col-md-4">
-					<h4 class="text-uppercase">To Extend</h4>
-					<p>
-						Develop a community of individuals and entrepreneurs who can
-						support, guide and encourage one another.
-					</p>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- /. Academy's Objectives Section -->
-
-	<!-- Footer -->
-	<footer class="page-footer font-small bg-footer text-white">
-		<div class="container">
-			<div class="row text-center d-flex justify-content-center">
-				<div class="col-md-2 footer-logo">
-					<a href="https://codeinstitute.net/" target="_blank"><img
+    <!-- Footer -->
+    <footer class="page-footer font-small bg-footer text-white">
+      <div class="container">
+        <div class="row text-center d-flex justify-content-center">
+          <div class="col-md-2 footer-logo">
+            <a href="https://codeinstitute.net/" target="_blank"
+              ><img
                 src="https://i.imgur.com/XeDBzqr.png"
                 alt="Code Institute Logo"
                 height="40"
             /></a>
-				</div>
-				<div class="col-sm-offset-3 col-sm-2 col-md-offset-0 col-md-1">
-					<a href="https://codeinstitute.net/privacy-policy/" target="_blank">Privacy</a>
-				</div>
-				<div class="col-sm-offset-0 col-sm-2 col-md-1">
-					<a href="faq.html">FAQ</a>
-				</div>
-				<div class="col-sm-2 col-md-1">
-					<a href="mailto:startupacademy@codeinstitute.net">Contact</a>
-				</div>
-				<div class="col-xs-7 col-sm-12 col-md-offset-1 col-md-4 button-message">
-					Make the world a better place!
-				</div>
-				<div class="col-xs-5 col-sm-12 col-md-2">
-					<a class="btn btn-light" type="button" href="signup.html">Sign Up</a>
-				</div>
-				<div class="col-xs-12 footer-copyright py-3">
-					© 2020 Startup Academy by Code Institute. All rights reserved.
-				</div>
-			</div>
-		</div>
-	</footer>
-	<!-- /. Footer -->
+          </div>
+          <div class="col-sm-offset-3 col-sm-2 col-md-offset-0 col-md-1">
+            <a href="https://codeinstitute.net/privacy-policy/" target="_blank"
+              >Privacy</a
+            >
+          </div>
+          <div class="col-sm-offset-0 col-sm-2 col-md-1">
+            <a href="faq.html">FAQ</a>
+          </div>
+          <div class="col-sm-2 col-md-1">
+            <a href="mailto:startupacademy@codeinstitute.net">Contact</a>
+          </div>
+          <div
+            class="col-xs-7 col-sm-12 col-md-offset-1 col-md-4 button-message"
+          >
+            Make the world a better place!
+          </div>
+          <div class="col-xs-5 col-sm-12 col-md-2">
+            <a class="btn btn-light" type="button" href="signup.html"
+              >Sign Up</a
+            >
+          </div>
+          <div class="col-xs-12 footer-copyright py-3">
+            © 2020 Startup Academy by Code Institute. All rights reserved.
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- /. Footer -->
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
-</body>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  </body>
 </html>
