--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="sticky-top">
       <div class="container">
         <!-- Navigation main structure code from https://bootsnipp.com/snippets/vlXGB and adapted to the project -->
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
@@ -72,6 +72,7 @@
       </div>
     </header>
     <!-- Hero Section -->
+    <!-- Code inspiration for Hero section from https://codetheweb.blog/demo/full-image-hero/ and adapted to my needs -->
     <section class="hero">
       <div class="container">
         <div class="hero-inner">
