--- a/topics.html
+++ b/topics.html
@@ -22,7 +22,7 @@
     <title>Startup Academy</title>
   </head>
   <body>
-    <header>
+    <header class="sticky-top">
       <div class="container">
         <!-- Navigation main structure code from https://bootsnipp.com/snippets/vlXGB and adapted to the project -->
         <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
