Slack page hero image and css improvement

--- a/slack.html
+++ b/slack.html
@@ -70,7 +70,36 @@
         </nav>
       </div>
     </header>
-    <section></section>
+
+    <!-- Hero Section -->
+    <section class="hero-slack">
+      <div class="container">
+        <div class="hero-inner">
+          <div class="row">
+            <div class="col-12">
+              <h1>Slack With Us</h1>
+            </div>
+            <div class="col-12 hero-message">
+              <h2>
+                Code Institue's community is here to help you, answer any
+                questions you may have and create a supportive environment for
+                your startup.
+              </h2>
+            </div>
+            <div class="col-sm-3 hero-button">
+              <a
+                href="https://code-institute-room.slack.com/messages/startups/"
+                class="btn btn-light btn-slack"
+                >Join The Startup Channel</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /. Hero Section -->
+
+    <!-- Footer -->
     <footer class="page-footer font-small bg-footer text-white">
       <div class="container">
         <div class="row text-center d-flex justify-content-center">
@@ -109,6 +138,8 @@
         </div>
       </div>
     </footer>
+    <!-- /. Footer -->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
