--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <h3>Sign up and join our next programme.</h3>
             </div>
             <div class="col-sm-3 hero-button">
-              <a href="signup.html" class="btn btn-light">Sign Up</a>
+              <a href="signup.html" class="btn btn-light btn-index">Sign Up</a>
             </div>
           </div>
         </div>
