Improved hero button styling

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <section class="hero">
       <div class="container">
         <div class="hero-inner">
-          <div class="row">
+          <div class="row no-gutters">
             <div class="col-12 col-lg-2 hero-logo">
               <img
                 src="https://i.imgur.com/0iWem9K.png"
