--- a/faq.html
+++ b/faq.html
@@ -46,10 +46,8 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto topnav">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html"
-                  >Home <span class="sr-only">(current)</span></a
-                >
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="topics.html">Topics</a>
@@ -87,8 +85,8 @@
               >Privacy</a
             >
           </div>
-          <div class="col-sm-offset-0 col-sm-2 col-md-1">
-            <a href="faq.html">FAQ</a>
+          <div class="col-sm-offset-0 col-sm-2 col-md-1 active">
+            <a href="faq.html">FAQ <span class="sr-only">(current)</span></a>
           </div>
           <div class="col-sm-2 col-md-1">
             <a href="mailto:startupacademy@codeinstitute.net">Contact</a>
