Added change world section to index.html + styles

--- a/index.html
+++ b/index.html
@@ -173,6 +173,32 @@
     </section>
     <!-- /. Academy's Objectives Section -->
 
+    <!-- Change The World Section -->
+    <section class="change-world">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 change-title">
+            <h2>Ready to change the world?</h2>
+          </div>
+          <div class="col-12">
+            <h4>
+              Learn the science of startups in 6 weeks with Code Institute's
+              free online programme.
+            </h4>
+          </div>
+          <div class="col-12 change-button">
+            <a href="signup.html" class="btn btn-primary">Sign Up</a>
+          </div>
+          <div class="col-12">
+            <p>
+              Registration for the next course will open soon. Sign up now to be
+              notified and reserve your seat.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /. Change The World Section -->
     <!-- Footer -->
     <footer class="page-footer font-small bg-footer text-white">
       <div class="container">
