CSS+HTML optimisation hero sections

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
     </header>
     <!-- Hero Section -->
     <!-- Code inspiration for Hero section from https://codetheweb.blog/demo/full-image-hero/ and adapted to my needs -->
-    <section class="hero">
+    <section class="hero hero-img-index">
       <div class="container">
         <div class="hero-inner">
-          <div class="row no-gutters">
+          <div class="row">
             <div class="col-12 col-lg-2 hero-logo">
               <img
                 src="https://i.imgur.com/0iWem9K.png"
@@ -96,7 +96,9 @@
               <h3>Sign up and join our next programme.</h3>
             </div>
             <div class="col-sm-3 hero-button">
-              <a href="signup.html" class="btn btn-light btn-index">Sign Up</a>
+              <a href="signup.html" class="btn btn-primary btn-index"
+                >Sign Up</a
+              >
             </div>
           </div>
         </div>
