--- a/slack.html
+++ b/slack.html
@@ -72,7 +72,7 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero-slack">
+    <section class="hero hero-img-slack">
       <div class="container">
         <div class="hero-inner">
           <div class="row">
@@ -89,7 +89,7 @@
             <div class="col-sm-3 hero-button">
               <a
                 href="https://code-institute-room.slack.com/messages/startups/"
-                class="btn btn-light btn-slack"
+                class="btn btn-primary btn-slack"
                 >Join The Startup Channel</a
               >
             </div>
