--- a/topics.html
+++ b/topics.html
@@ -70,7 +70,9 @@
         </nav>
       </div>
     </header>
-    <section class="hero-topics">
+
+    <!-- Hero Section -->
+    <section class="hero hero-img-topics">
       <div class="container">
         <div class="hero-inner">
           <div class="row">
@@ -92,6 +94,8 @@
         </div>
       </div>
     </section>
+    <!-- /. Hero Section -->
+
     <footer class="page-footer font-small bg-footer text-white">
       <div class="container">
         <div class="row text-center d-flex justify-content-center">
