Small improvement to CSS classes

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </header>
     <!-- Hero Section -->
     <!-- Code inspiration for Hero section from https://codetheweb.blog/demo/full-image-hero/ and adapted to my needs -->
-    <section class="hero hero-img-index">
+    <section class="hero hero-index">
       <div class="container">
         <div class="hero-inner">
           <div class="row">
