--- a/slack.html
+++ b/slack.html
@@ -72,7 +72,7 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero hero-img-slack">
+    <section class="hero hero-slack">
       <div class="container">
         <div class="hero-inner">
           <div class="row">
