--- a/topics.html
+++ b/topics.html
@@ -72,7 +72,7 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero hero-img-topics">
+    <section class="hero hero-topics">
       <div class="container">
         <div class="hero-inner">
           <div class="row">
