--- a/index.html
+++ b/index.html
@@ -75,31 +75,27 @@
     <!-- Code inspiration for Hero section from https://codetheweb.blog/demo/full-image-hero/ and adapted to my needs -->
     <section class="hero hero-index">
       <div class="container">
-        <div class="hero-inner">
-          <div class="row">
-            <div class="col-12 col-lg-2 hero-logo">
-              <img
-                src="https://i.imgur.com/0iWem9K.png"
-                alt="Startup Academy Icon White"
-              />
-            </div>
-            <div class="col-12 col-lg-10 hero-title">
-              <h1>Startup Academy</h1>
-            </div>
-            <div class="col-12 hero-message">
-              <h2>
-                Learn the science of startups in 6 weeks with Code Institute's
-                free Startup Academy.
-              </h2>
-            </div>
-            <div class="col-12 hero-signup">
-              <h3>Sign up and join our next programme.</h3>
-            </div>
-            <div class="col-sm-3 hero-button">
-              <a href="signup.html" class="btn btn-primary btn-index"
-                >Sign Up</a
-              >
-            </div>
+        <div class="row">
+          <div class="col-12 col-lg-2 hero-logo">
+            <img
+              src="https://i.imgur.com/0iWem9K.png"
+              alt="Startup Academy Icon White"
+            />
+          </div>
+          <div class="col-12 col-lg-10 hero-title">
+            <h1>Startup Academy</h1>
+          </div>
+          <div class="col-12 hero-message">
+            <h2>
+              Learn the science of startups in 6 weeks with Code Institute's
+              free Startup Academy.
+            </h2>
+          </div>
+          <div class="col-12">
+            <h3>Sign up and join our next programme.</h3>
+          </div>
+          <div class="col-sm-3 hero-button">
+            <a href="signup.html" class="btn btn-primary btn-index">Sign Up</a>
           </div>
         </div>
       </div>
