Small html improvement index and singup.html

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </head>
 
   <body>
+    <!-- Header / Navigation -->
     <header class="sticky-top">
       <div class="container">
         <!-- Navigation main structure code from https://bootsnipp.com/snippets/vlXGB and adapted to the project -->
@@ -71,6 +72,8 @@
         </nav>
       </div>
     </header>
+    <!-- /. Header / Navigation -->
+
     <!-- Hero Section -->
     <!-- Code inspiration for Hero section from https://codetheweb.blog/demo/full-image-hero/ and adapted to my needs -->
     <section class="hero hero-index">
@@ -101,6 +104,7 @@
       </div>
     </section>
     <!-- /. Hero Section -->
+
     <!-- What You Will Get Section -->
     <section class="what-you-get bg-dark">
       <div class="container">
@@ -197,6 +201,7 @@
       </div>
     </section>
     <!-- /. Change The World Section -->
+
     <!-- Footer -->
     <footer class="page-footer font-small bg-footer text-white">
       <div class="container">
