--- a/signup.html
+++ b/signup.html
@@ -75,7 +75,7 @@
             <span><i class="fa fa-university"></i></span>
             <h2>The Startup Science</h2>
           </div>
-          <div class="col-12 hero-message">
+          <div class="col-12 hero-message mb-4">
             <h4>
               We'd love for you to join us. Complete the form below, and we'll
               get back to you soon.
