--- a/slack.html
+++ b/slack.html
@@ -22,6 +22,7 @@
     <title>Startup Academy</title>
   </head>
   <body>
+    <!-- Header / Navigation -->
     <header class="sticky-top">
       <div class="container">
         <!-- Navigation main structure code from https://bootsnipp.com/snippets/vlXGB and adapted to the project -->
@@ -70,6 +71,7 @@
         </nav>
       </div>
     </header>
+    <!-- /. Header / Navigation -->
 
     <!-- Hero Section -->
     <section class="hero hero-slack">
