--- a/help.html
+++ b/help.html
@@ -22,6 +22,7 @@
     <title>Startup Academy</title>
   </head>
   <body>
+    <!-- Header / Navigation -->
     <header class="sticky-top">
       <div class="container">
         <!-- Navigation main structure code from https://bootsnipp.com/snippets/vlXGB and adapted to the project -->
@@ -70,7 +71,11 @@
         </nav>
       </div>
     </header>
+    <!-- /. Header / Navigation -->
+
     <section></section>
+
+    <!-- Footer -->
     <footer class="page-footer font-small bg-footer text-white">
       <div class="container">
         <div class="row text-center d-flex justify-content-center">
@@ -109,6 +114,8 @@
         </div>
       </div>
     </footer>
+    <!-- /. Footer -->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
