--- a/signup.html
+++ b/signup.html
@@ -89,7 +89,7 @@
             <!-- Form initial structure taken from https://mdbootstrap.com/snippets/jquery/temp/2023911?action=prism_export and adapted to project needs -->
             <form class="border border-light p-3" action="#!" method="post">
               <!-- First name -->
-              <label for="firstName"> First Name:</label>
+              <label for="firstName"> First Name: <span>*</span></label>
               <input
                 type="text"
                 id="firstName"
@@ -99,7 +99,7 @@
               />
 
               <!-- Last name -->
-              <label for="lastName"> Last Name:</label>
+              <label for="lastName"> Last Name: <span>*</span></label>
               <input
                 type="text"
                 id="lastName"
@@ -109,7 +109,7 @@
               />
 
               <!-- E-mail -->
-              <label for="email">Email:</label>
+              <label for="email">Email: <span>*</span></label>
               <input
                 type="email"
                 id="email"
@@ -120,7 +120,7 @@
               />
 
               <!-- Phone number -->
-              <label for="phoneNumber">Phone Number:</label>
+              <label for="phoneNumber">Phone Number: <span>*</span></label>
               <input
                 type="text"
                 id="phoneNumber"
@@ -151,7 +151,7 @@
 
               <!-- Terms of service -->
               <p class="terms">
-                By clicking <em>Sign up</em> you agree to our
+                By clicking <em>Sign Up</em> you agree to our
                 <a
                   href="https://codeinstitute.net/terms-and-conditions/"
                   target="_blank"
