Help page + css improvements

--- a/help.html
+++ b/help.html
@@ -73,7 +73,54 @@
     </header>
     <!-- /. Header / Navigation -->
 
-    <section></section>
+    <!-- Main Help Page Section -->
+    <section class="hero-help">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h1>How Can We Help?</h1>
+          </div>
+          <div class="col-12 hero-message">
+            <h2>
+              We are here to help you in any way that we can.
+            </h2>
+            <h3>For Your Questions & Feedback</h3>
+            <hr />
+            <p>
+              If you consider it's a general question that can help other
+              individuals in the programme, please post it on the
+              <a
+                href="https://code-institute-room.slack.com/messages/startups/"
+                target="_blank"
+                >Slack channel</a
+              >.
+            </p>
+            <p>
+              If you have a specific technical issue, please email us at
+              <a href="mailto:startupacademy@codeinstitute.net" target="_blank"
+                >startupacademy@codeinstitute.net</a
+              >.
+            </p>
+            <h3>To Report an Abusive Behaviour</h3>
+            <hr />
+            <p>
+              Here at Code Institute, we want Startup Academy to be a place
+              where our members always feel safe in; therefore, we take all
+              reports of harassment or abuse extremely seriously.
+            </p>
+            <p>
+              If you believe you are being harassed or you come across content
+              that you consider it violates our values, please report this to us
+              at
+              <a href="mailto:startupacademy@condeinstitute.net" target="_blank"
+                >startupacademy@condeinstitute.net</a
+              >.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /. Main Help Page Section -->
 
     <!-- Footer -->
     <footer class="page-footer font-small bg-footer text-white">
