FAQ page + styles

--- a/faq.html
+++ b/faq.html
@@ -71,7 +71,98 @@
     </header>
     <!-- /. Header / Navigation -->
 
-    <section></section>
+    <!-- FAQ Section -->
+    <section class="hero-faq">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h1>Frequently Asked Questions</h1>
+          </div>
+          <div class="col-12 hero-message">
+            <h2>
+              Contact us at
+              <a href="mailto:startupacademy@codeinstitute.net" target="_blank"
+                >startupacademy@codeinstitute.net</a
+              >
+              if you don't see your question here.
+            </h2>
+            <h3>1. How much does the programme costs?</h3>
+            <p>
+              The Startup Academy is entirely free for Code Institute's students
+              and graduates. All you need to join is a device with access to the
+              internet.
+            </p>
+            <hr />
+            <h3>2. How many individuals can participate in the programme?</h3>
+            <p>We do not have a limit.</p>
+            <hr />
+            <h3>
+              3. How much time should I expect to allocate for the programme?
+            </h3>
+            <p>
+              There is a minimum commitment of 1:30 hours a week for the
+              sprints.
+            </p>
+            <hr />
+            <h3>4. Who can participate in the programme?</h3>
+            <p>
+              The Academy is open to all individuals. Entrepreneurs about to
+              start building their startup can also go through the programme.
+            </p>
+            <p>
+              If you’re already working on a startup, you are more than welcome
+              to participate as well.
+            </p>
+            <hr />
+            <h3>
+              5. If I’m already building a startup, why should I consider it?
+            </h3>
+            <p>
+              If you’re building a startup, the programme will provide valuable
+              insight into running your business through exposure to best
+              practices, practical resources, and actionable guidance.
+            </p>
+            <p>
+              In addition to the sprint material, you will become part of a
+              talented community of like-minded individuals.
+            </p>
+            <hr />
+            <h3>6. Are there requirements to complete the programme?</h3>
+            <p>
+              There are no tests, exams or requirements to complete/pass the
+              programme. However, we highly advise not to miss any of the
+              sprints.
+            </p>
+            <hr />
+            <h3>
+              7. If I’m collaborating with other individuals, who should
+              participate?
+            </h3>
+            <p>
+              We recommend your co-founders/teammates to also participate in the
+              programme.
+            </p>
+            <hr />
+            <h3>8. Who is conducting the sprints?</h3>
+            <p>
+              Carlos, in collaboration with a great group of entrepreneurs and
+              industry experts, will conduct the sprints.
+            </p>
+            <hr />
+            <h3>9. Will the sprints be recorded?</h3>
+            <p>No. However, all sprints materials will be shared.</p>
+            <hr />
+            <h3>10. What happens when the programme concludes?</h3>
+            <p>
+              Upon completing the Academy, you will have learned invaluable
+              lessons that will exponentially increase your startup's
+              probability of success.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /. FAQ Section -->
 
     <!-- Footer -->
     <footer class="page-footer font-small bg-footer text-white">
