Added aria labels to improve accessibility

--- a/faq.html
+++ b/faq.html
@@ -193,7 +193,11 @@
             Make the world a better place!
           </div>
           <div class="col-xs-5 col-sm-12 col-md-2">
-            <a class="btn btn-light" type="button" href="signup.html"
+            <a
+              class="btn btn-light"
+              type="button"
+              href="signup.html"
+              aria-label="Sign Up Button"
               >Sign Up</a
             >
           </div>
