--- a/signup.html
+++ b/signup.html
@@ -87,7 +87,12 @@
           </div>
           <div class="col-12">
             <!-- Form initial structure taken from https://mdbootstrap.com/snippets/jquery/temp/2023911?action=prism_export and adapted to project needs -->
-            <form class="border border-light p-3" action="#!" method="post">
+            <form
+              class="border border-light p-3"
+              action="#"
+              method="post"
+              aria-label="Sign Up Form"
+            >
               <!-- First name -->
               <label for="firstName"> First Name: <span>*</span></label>
               <input
@@ -143,7 +148,11 @@
               </p>
 
               <!-- Sign up button -->
-              <button class="btn btn-primary my-4 btn-block" type="submit">
+              <button
+                class="btn btn-primary my-4 btn-block"
+                type="submit"
+                aria-label="Sign Up Form Submission Button"
+              >
                 Sign Up
               </button>
 
@@ -194,7 +203,11 @@
             Make the world a better place!
           </div>
           <div class="col-xs-5 col-sm-12 col-md-2">
-            <a class="btn btn-light" type="button" href="signup.html"
+            <a
+              class="btn btn-light"
+              type="button"
+              href="signup.html"
+              aria-label="Sign Up Button"
               >Sign Up</a
             >
           </div>
