--- a/slack.html
+++ b/slack.html
@@ -91,6 +91,7 @@
             <a
               href="https://code-institute-room.slack.com/messages/startups/"
               class="btn btn-primary btn-slack"
+              aria-label="Startup Channel Button"
               >Join The Startup Channel</a
             >
           </div>
@@ -128,7 +129,11 @@
             Make the world a better place!
           </div>
           <div class="col-xs-5 col-sm-12 col-md-2">
-            <a class="btn btn-light" type="button" href="signup.html"
+            <a
+              class="btn btn-light"
+              type="button"
+              href="signup.html"
+              aria-label="Sign Up Button"
               >Sign Up</a
             >
           </div>
