--- a/index.html
+++ b/index.html
@@ -98,7 +98,12 @@
             <h3>Sign up and join our next programme.</h3>
           </div>
           <div class="col-sm-3 hero-button">
-            <a href="signup.html" class="btn btn-primary btn-index">Sign Up</a>
+            <a
+              href="signup.html"
+              class="btn btn-primary btn-index"
+              aria-label="Sign Up Button"
+              >Sign Up</a
+            >
           </div>
         </div>
       </div>
@@ -189,7 +194,12 @@
             </h4>
           </div>
           <div class="col-12 change-button">
-            <a href="signup.html" class="btn btn-primary">Sign Up</a>
+            <a
+              href="signup.html"
+              class="btn btn-primary"
+              aria-label="Sign Up Button"
+              >Sign Up</a
+            >
           </div>
           <div class="col-12">
             <p>
@@ -231,7 +241,11 @@
             Make the world a better place!
           </div>
           <div class="col-xs-5 col-sm-12 col-md-2">
-            <a class="btn btn-light" type="button" href="signup.html"
+            <a
+              class="btn btn-light"
+              type="button"
+              href="signup.html"
+              aria-label="Sign Up Button"
               >Sign Up</a
             >
           </div>
