CSS improvements to help and faq.html

--- a/faq.html
+++ b/faq.html
@@ -80,9 +80,12 @@
           </div>
           <div class="col-12 hero-message">
             <h2>
-              Contact us at
-              <a href="mailto:startupacademy@codeinstitute.net" target="_blank"
-                >startupacademy@codeinstitute.net</a
+              Contact us
+              <a
+                href="mailto:startupacademy@codeinstitute.net"
+                target="_blank"
+                aria-label="Startup Academy Email Address"
+                >here</a
               >
               if you don't see your question here.
             </h2>
