Topics main section and structure + styles

--- a/topics.html
+++ b/topics.html
@@ -96,6 +96,207 @@
     </section>
     <!-- /. Hero Section -->
 
+    <section class="sprints">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2>Sprint One</h2>
+            <hr />
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <img
+              src="https://i.imgur.com/4XKa50N.jpg"
+              alt="people in theatre"
+            />
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <h4>Code Institute Startup Academy Introduction</h4>
+            <p>
+              We introduce the academy, clarify the expectations, and explain
+              all of its parts and pieces.
+            </p>
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <img
+              src="https://i.imgur.com/4XKa50N.jpg"
+              alt="people in theatre"
+            />
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <h4>Do you have what it takes to be a founder?</h4>
+            <p>
+              We explain what it takes to be an entrepreneur and the founder of
+              a successful startup. We talk about the reality of being an
+              entrepreneur.
+            </p>
+          </div>
+          <div class="col-12 mt-4">
+            <h2>Sprint Two</h2>
+            <hr />
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <img
+              src="https://i.imgur.com/4XKa50N.jpg"
+              alt="people in theatre"
+            />
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <h4>Is your startup idea worth it?</h4>
+            <p>
+              We walk you through how to assess ideas and how you should think
+              about your startups.
+            </p>
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <img
+              src="https://i.imgur.com/4XKa50N.jpg"
+              alt="people in theatre"
+            />
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <h4>How do you talk to users and/or potential users?</h4>
+            <p>
+              We provide a structure for asking questions and collecting
+              feedback from users and potential users.
+            </p>
+          </div>
+          <div class="col-12 mt-4">
+            <h2>Sprint Three</h2>
+            <hr />
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <img
+              src="https://i.imgur.com/4XKa50N.jpg"
+              alt="people in theatre"
+            />
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <h4>
+              Naming your startup and the initial steps to set up your brand.
+            </h4>
+            <p>
+              We talk about the importance of choosing a great name and the
+              initial designs of the startup brand.
+            </p>
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <img
+              src="https://i.imgur.com/4XKa50N.jpg"
+              alt="people in theatre"
+            />
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <h4>
+              Tools and services to get you started and for which ones you
+              should pay.
+            </h4>
+            <p>
+              There are a lot of services out there, and it can be overwhelming
+              to choose which ones to use when starting up. We share the best
+              and most affordable tools to get started.
+            </p>
+          </div>
+          <div class="col-12 mt-4">
+            <h2>Sprint Four</h2>
+            <hr />
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <img
+              src="https://i.imgur.com/4XKa50N.jpg"
+              alt="people in theatre"
+            />
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <h4>
+              What is an MVP (Minimum Viable Product), and how do you build one?
+            </h4>
+            <p>
+              We explain what an MVP is and what is not. We also share the best
+              way to build an MVP and get the first users as a pre-launch
+              startup.
+            </p>
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <img
+              src="https://i.imgur.com/4XKa50N.jpg"
+              alt="people in theatre"
+            />
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <h4>Do you need a co-founder and how would you find one?</h4>
+            <p>
+              We talk about how to find a co-founder, where co-founders from top
+              companies meet, what investors look for in cofounding teams, how
+              to split equity with co-founders, and if a co-founder is needed.
+            </p>
+          </div>
+          <div class="col-12 mt-4">
+            <h2>Sprint Five</h2>
+            <hr />
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <img
+              src="https://i.imgur.com/4XKa50N.jpg"
+              alt="people in theatre"
+            />
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <h4>How to work with co-founders.</h4>
+            <p>
+              We talk about the importance of creating a successful working
+              relationship with co-founders and establishing processes to
+              optimize the strengths of your team.
+            </p>
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <img
+              src="https://i.imgur.com/4XKa50N.jpg"
+              alt="people in theatre"
+            />
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <h4>How to set the price for your product/service?</h4>
+            <p>
+              We go over the basics of pricing and monetization, how it will
+              affect customer acquisition, and how to improve it through a few
+              standard best practices.
+            </p>
+          </div>
+          <div class="col-12 mt-4">
+            <h2>Sprint Six</h2>
+            <hr />
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <img
+              src="https://i.imgur.com/4XKa50N.jpg"
+              alt="people in theatre"
+            />
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <h4>Pitching your startup and how to do it right.</h4>
+            <p>
+              We go over how to summarise the idea and communicate it to an
+              investor. We'll share tips on how to craft a precise and compact
+              pitch that grabs the audience's attention.
+            </p>
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <img
+              src="https://i.imgur.com/4XKa50N.jpg"
+              alt="people in theatre"
+            />
+          </div>
+          <div class="col-sm-12 col-md-6 mt-3">
+            <h4>You’ve raised your first investment round, now what?</h4>
+            <p>
+              We clarify what it means to raise funding and what are mandatory
+              steps to follow once that happens.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Footer -->
     <footer class="page-footer font-small bg-footer text-white">
       <div class="container">
